--- a/src/components/News/News.scss
+++ b/src/components/News/News.scss
@@ -2,6 +2,10 @@
     .read-continue {
         font-weight: 500;        
     }
+
+    .read-continue:hover {
+        font-weight: 5000;        
+    }
     
     .card-body a:hover{
         color:var(--secondary);
