--- a/src/components/Slideshow/Slideshow.scss
+++ b/src/components/Slideshow/Slideshow.scss
@@ -1,6 +1,6 @@
 // start sidebar
 .slick-slider{
-    z-index: -1;
+    //z-index: -1;
     img{
         object-fit: cover;
         width: 100%;
