--- a/src/layouts/LayoutElements/Footer/Footer.scss
+++ b/src/layouts/LayoutElements/Footer/Footer.scss
@@ -8,14 +8,10 @@
         align-items: center;
         min-width: 400px;
         padding: 10px;
-        .img-logo {
-            width: 100px;
-            height: 100px;
-            background-image: url('/assets/images/logo.png');
-            background-size: cover;
-        }
-        .txt-logo {
-            padding-left: 10px;
+        
+        img{                    
+            max-width: 350px;
+            height: auto;
         }
     }
 
