--- a/src/layouts/LayoutElements/Header/Header.scss
+++ b/src/layouts/LayoutElements/Header/Header.scss
@@ -59,6 +59,11 @@
                 align-items: center;
                 justify-content: space-between;
                 min-width: 360px;
+
+                img{                    
+                    max-width: 380px;
+                    height: auto;
+                }
             }
             .wrapper-search {
                 // a
