--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -12,7 +12,7 @@ $line-height-base:1.5;
 }
 
 .App{
-  min-width: 400px;
+  min-width: 450px;
 }
 
 .card{
